Made the frontend and linked the frontend with the backend

--- a/encrypty-main/.gitignore
+++ b/encrypty-main/.gitignore
@@ -1,1 +1,15 @@
+# macOS system file
 .DS_Store
+
+# Python
+__pycache__/
+*.pyc
+
+# Virtual environment
+venv/
+encrypty-main/venv/
+
+# Environment & build
+.env
+*.log
+*.egg-info/
